Fix bug #73538

Remove any previous default headers and replace with the specified
ones, as documented, and as is the case when a single header is
passed.